# raytracing_homework

./: CMakeLists.txt  README.md
example/cornell-box/: cornell-box.xml
example/staircase/: staircase.xml
inc/: AABB.h  BVHNode.h  Light.h  Material.h  RAY.h  Texture.h  Triangle.h  camera.h  hitreord.h  mymath.h  ray.h  scene.h
scene2build/: CMakeCache.txt  Makefile  cmake_install.cmake  target
src/: AABB.cpp  BVHNode.cpp  Texture.cpp  Triangle.cpp  camera.cpp  main.cpp  mymath.cpp  scene.cpp
